[package]
name = "lummaper"
version = "0.1.0"
edition = "2021"
license = "MPL"
authors = ["Mitchel Stewart <quackdoctech@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
av-metrics-decoders = { version = "0.2.1", features = [
    "vapoursynth",
] }
yuvxyb = "0.3.0"
clap = { version = "4.0.18", features = ["derive"] }
num-traits = "0.2.15"
wgpu = "0.15.1"

